--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.apps.habitize">
-   <application
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <application
         android:label="habitize"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -39,3 +43,8 @@
             android:value="2" />
     </application>
 </manifest>
+
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  package="com.example.testproject">
+  
+
