--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flutter_colorpicker: ^0.5.0
   fast_color_picker: ^0.1.0
   cloud_firestore: ^2.4.0
+  hexcolor: ^2.0.4
+  flutter_local_notifications: ^8.1.1+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
